ponytail: trim dead backend weight found in tonight's audit
- WeeklySpending/spending(String) overload: the DTO carried weekStart/
  weekEnd/receipts that nothing downstream read, and a single-arg
  spending() with exactly one caller (a test). Both gone; the repo
  query is now a straight typed RowMapper, no Object[] detour.
- RetailerService deleted — it only forwarded to the repository.
  RetailerController calls it directly.
- value.trim().isEmpty() -> value.isBlank(), two call sites.
- price-import.schedule.enabled: dropped the env-var indirection and
  the comment claiming production toggles it — production and
  local-daily both hardcode it false, so the env var could never do
  anything.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>